@startuml
!include _structure-style.puml
title Analisis de clases de dominio
skinparam classAttributeIconSize 0
left to right direction

class User {
    - id: String
    - email: String {unique}
    - role: UserRole
    - publicKey: String
    - createdAt: DateTime
}

enum UserRole {
    USER
    ADMIN
}

class Wallet {
    - id: String
    - walletAddress: String
    - isPrimary: Boolean
}

class Document {
    - id: String
    - name: String
    - contentHash: String
    - metadataHash: String
    - isArchived: Boolean
    - createdAt: DateTime
}

class Version {
    - id: String
    - versionNumber: Int
    - ipfsCid: String
    - isOperational: Boolean
    - createdAt: DateTime
}

class DocumentSignature {
    - id: String
    - signedAt: DateTime
    - blockchainTxHash: String?
}

class Folder {
    - id: String
    - name: String
    - isShared: Boolean
}

class Event {
    - id: String
    - eventType: String
    - metadata: JSON
    - transactionHash: String?
    - blockNumber: Int?
    - createdAt: DateTime
}

class UserStats {
    - totalDocuments: Int
    - totalSize: BigInt
    - totalSignatures: Int
}

class Notification {
    - id: String
    - type: String
    - isRead: Boolean
    - createdAt: DateTime
}

User "1" -- "0..5" Wallet : owns >
User "1" -- "*" Document : owns >
User "1" -- "*" Folder : organizes >
User "1" -- "0..1" UserStats : has >
User "1" -- "*" Notification : receives >

Document "*" -- "1" User : belongs to
Document "*" -- "0..1" Folder : contained in
Document "1" -- "*" Version : has >
Document "1" -- "*" DocumentSignature : signed by >
Document "1" -- "*" Event : generates >

Version "*" -- "1" Document : version of
Version "1" -- "*" DocumentSignature : has signatures >
Version "*" -- "1" User : created by

DocumentSignature "*" -- "1" User : signed by
DocumentSignature "*" -- "0..1" Wallet : from wallet

Folder "*" -- "0..1" Folder : parent

@enduml

